--- a/static/normalize.css
+++ b/static/normalize.css
@@ -5,8 +5,14 @@
 /*Border-radius*/
 /*Box-shadow*/
 /*Buttons*/
-/*Calculate rems*/
+/*HAVE GLOBAL MARGINS TO USE*/
+/*HAVE GLOBAL PADDINGS TO USE*/
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -25,7 +31,10 @@ html {
  * Remove default margin.
  */
 body {
-  margin: 0; }
+  margin: 0;
+  font-size: 16px;
+  font-size: calculateEm(16px);
+  line-height: calculateLineHeight(16px); }
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -37,17 +46,12 @@ body {
  */
 article,
 aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
 main,
 menu,
 nav,
-section,
-summary {
+section {
   display: block; }
 
 /**
@@ -120,7 +124,6 @@ dfn {
  * contexts in Firefox 4+, Safari, and Chrome.
  */
 h1 {
-  font-size: 2em;
   margin: 0.67em 0; }
 
 /**
@@ -168,12 +171,6 @@ svg:not(:root) {
 
 /* Grouping content
    ========================================================================== */
-/**
- * Address margin not present in IE 8/9 and Safari.
- */
-figure {
-  margin: 1em 40px; }
-
 /**
  * Address differences between Firefox and other browsers.
  */
@@ -328,16 +325,6 @@ fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em; }
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  /* 2 */ }
 
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
