--- a/static/sass/normalize.scss
+++ b/static/sass/normalize.scss
@@ -7,6 +7,12 @@
 }
 
 
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; 
+}
+  
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
 /**
@@ -27,6 +33,7 @@ html {
 
 body {
   margin: 0;
+  @include fontSize($base-font-size); 
 }
 
 /* HTML5 display definitions
@@ -41,17 +48,12 @@ body {
 
 article,
 aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
 main,
 menu,
 nav,
-section,
-summary {
+section{
   display: block;
 }
 
@@ -142,7 +144,6 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
   margin: 0.67em 0;
 }
 
@@ -204,14 +205,6 @@ svg:not(:root) {
 
 /* Grouping content
    ========================================================================== */
-
-/**
- * Address margin not present in IE 8/9 and Safari.
- */
-
-figure {
-  margin: 1em 40px;
-}
 
 /**
  * Address differences between Firefox and other browsers.
@@ -389,16 +382,6 @@ fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
-}
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-
-legend {
-  border: 0; /* 1 */
-  padding: 0; /* 2 */
 }
 
 /**
