--- a/static/sass/sass_helpers/_variables.scss
+++ b/static/sass/sass_helpers/_variables.scss
@@ -11,6 +11,24 @@ $color-yellow: #EFC94C;
 $color-orange: #E3793F;
 $color-red: #DF494A;
 
+$color-blue-active : #324C5D;
+$color-blue-hover : #324C5D;
+$color-blue-inactive : #324C5D;
+
+$color-red-active : #DF494A;
+$color-red-hover : #DF494A;
+$color-red-inactive : #DF494B;
+
+$color-green-active : #46B19D;
+$color-green-hover : #46B19D;
+$color-green-inactive : #324C5D;
+
+$color-yellow-active : #EFC94C;
+$color-yellow-hover : #EFC94C;
+$color-yellow-inactive : #324C5D;
+
+
+
 $color-link: #DF494A;
 $color-visited-link: #DF494A;
 $color-focus-link: #DF494A;
