--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,14 +1,9 @@
 //Import variables and mixins
-
 	@import 'sass_helpers/_variables';
+	@import 'sass_helpers/_functions';
 	@import 'sass_helpers/_mixins';
 
 //Reset
-
 	@import 'normalize';
-
-
 //Global
-	//Global styles and elements
 	@import 'global/globals';
-	@import 'global/buttons';
